@@ -1,11 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.85 2005/03/21 07:25:20 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.86 2005/03/22 05:13:08 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
-  Reenabled 'emerge sync' option.
+  Reenabled 'emerge sync' option. Removed get_random_salt() function and
+  replaced call to crypt.crypt() with GLIUtility.hash_password()
 
   19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Temporarily disabled 'emerge sync' option in PortageTree due to python
