@@ -3,6 +3,10 @@
 
 dialogfe (05 Jan 2005):
 
+  21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Removed get_random_salt() function and replaced calls to crypt.crypt()
+  with calls to GLIUtility.hash_password()
+
   21 Mar 2005; Preston Cody <codeman@gentoo.org>
   Re-enabled emerge sync since new python patch fixes threading bug.
 
